# ChangeLog for x11-libs/openmotif
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/openmotif/ChangeLog,v 1.224 2009/11/18 19:12:20 ulm Exp $

  18 Nov 2009; Ulrich Mueller <ulm@gentoo.org> openmotif-2.3.2.ebuild,
  +files/openmotif-2.3.2-ldflags.patch:
  Don't override LDFLAGS, fixes bug 293573.

  25 Sep 2009; Ulrich Mueller <ulm@gentoo.org> -openmotif-2.3.0-r3.ebuild,
  -files/openmotif-2.3.0-fix-nedit-segfaults.patch,
  -files/openmotif-2.3.0-freebsd-libiconv.patch,
  -files/openmotif-2.3.0-sensitivity-invisible.patch:
  Remove old.

  13 Jul 2009; Joseph Jezak <josejx@gentoo.org> openmotif-2.3.2.ebuild:
  Marked ppc stable for bug #273064.

  04 Jul 2009; Brent Baude <ranger@gentoo.org> openmotif-2.3.2.ebuild:
  Marking openmotif-2.3.2 ppc64 for bug 273064

  22 Jun 2009; Raúl Porcel <armin76@gentoo.org> openmotif-2.3.2.ebuild:
  arm/ia64/sh/sparc stable wrt #273064

  16 Jun 2009; Tobias Klausmann <klausman@gentoo.org>
  openmotif-2.3.2.ebuild:
  Stable on alpha, bug #273064

  15 Jun 2009; Jeroen Roovers <jer@gentoo.org> openmotif-2.3.2.ebuild:
  Stable for HPPA (bug #273064).

  11 Jun 2009; Markus Meier <maekke@gentoo.org> openmotif-2.3.2.ebuild:
  amd64 stable, bug #273064

  08 Jun 2009; Christian Faulhammer <fauli@gentoo.org>
  openmotif-2.3.2.ebuild:
  stable x86, bug 273064

  16 Apr 2009; Ulrich Mueller <ulm@gentoo.org> openmotif-2.3.2.ebuild:
  Add -j1 back to src_compile and src_install, fixes bug 266202.

*openmotif-2.3.2 (14 Apr 2009)

  14 Apr 2009; Ulrich Mueller <ulm@gentoo.org> +openmotif-2.3.2.ebuild:
  Version bump. Remove -j1 option from emake.

  04 Feb 2009; Ulrich Mueller <ulm@gentoo.org>
  +files/openmotif-2.3.1-ac-editres.patch, openmotif-2.3.0-r3.ebuild,
  openmotif-2.3.1.1.ebuild:
  Fix "present but cannot be compiled" warning in configure, in order to
  prepare for autoconf-2.64. Bug 82081 (see also tracker bug 257596).
