@@ -14,7 +14,7 @@ AUX openmotif-2.3.2-ldflags.patch 654 RMD160 8756d40e95f64a851838042f9cf2152a1b6
 DIST openmotif-2.3.0-manual.pdf.tgz 4195259 RMD160 45b1a17a653b01ccf0324e0bc70fd1ef5db5a395 SHA1 1d0f55928ad65ee321564ba962b1608cfd83bb96 SHA256 49692fd4d5441d2dbb5ca36199b209c8503452fda9b36e929d1aa3673bffaecb
 DIST openmotif-2.3.1-1.tar.gz 5937284 RMD160 e03422204b6077fa6556894f194236d40e92e42b SHA1 3245375f4bd8e2d2eb02c2636d5491e834d8bb1a SHA256 1f831a1a2feb63af3167e54eacc12856d8a38b9caf6342f30daf901a414a986e
 DIST openmotif-2.3.2.tar.gz 5941784 RMD160 2346a93fcec57b9c18b6657d1cc681b6001cba28 SHA1 c98ac1bf3640ce57da34a0704bdeb2b12011ae1f SHA256 f786f3724d33133e8c4b3c9b368c89d680e981ca1c0e8c3280f496976b390c7d
-EBUILD openmotif-2.3.1.1.ebuild 4811 RMD160 72126373c65d1de8d151ecb18dec3fdf411d5832 SHA1 691e5dbe43f9441d45f6cd34a07cc5bf12fd4bc4 SHA256 ad9b390c78d159d9576bf1c6e1c8c7e923c3950bcb611c9c23dcb2b57ca77ae0
-EBUILD openmotif-2.3.2.ebuild 4598 RMD160 cae7bd85c9362bea796d5c100439ea15bc90104f SHA1 442c58621c75a793ecc642cebe6dabe5c163bc77 SHA256 7d71130552bb8d83c602119210fa9bde4015cca5ad127a42cea096092fc0d985
-MISC ChangeLog 33694 RMD160 c2cc856730bc3db8ee547028c4d96949e2fdc990 SHA1 84feba7dffce27c747d927d4d9211e9fbe768326 SHA256 a4d39f305df800435012ad7f68cb1c668fb78b4d172d3190e708236a2519cb8b
+EBUILD openmotif-2.3.1.1.ebuild 4808 RMD160 d3b0e714eac42b9946d5df0035b47cf32aa409c0 SHA1 310b1a62e3878db55e5b1fff6ae297447e1a3c8f SHA256 db8a83837bbdeafac7b4c9534bebce8b95ba55f117c3a38199ff3085432d65fc
+EBUILD openmotif-2.3.2.ebuild 4595 RMD160 961647f45e7dce8921ce9ef72d287e0abd6a1a02 SHA1 0d17384c4f1a37c6bb091ed704f6a9b76bdd3ddf SHA256 7377ae81c5bb6644a9c4516c259d1ed33009eff4b0eb30a8c87a90c869197cd0
+MISC ChangeLog 33829 RMD160 c61713c8688c627f0271729655eb415308ecea53 SHA1 eb18082a6cc52a71b977fd035595c44b5293cbaf SHA256 ea332e82054b889573ada127d4594645a7004ffa59babc0f9394f27ca5844d06
 MISC metadata.xml 219 RMD160 e4108515c4905448a3f0666974dfe0606bee0527 SHA1 02c240887d922c73610257891793b3bdec27fc8e SHA256 c1572876b54cc63c7b7ecad4c9adf1b6460d166c41e84b1df0322c5df6497ffb
